--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,9 @@ body {
   max-width: 100vw;
 }
 
-.lightbox__button {
+.lightbox__button,
+.prev-slide,
+.next-slide {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -134,7 +136,22 @@ body {
   background-repeat: no-repeat;
 }
 
+.prev-slide {
+  top: 50%;
+  left: 8px;
+  background-image: url("../images/left-arrow-svgrepo-com.svg");
+}
+
+.next-slide {
+  top: 50%;
+  background-image: url("../images/right-arrow-svgrepo-com.svg");
+}
+
 .lightbox__button:hover,
-.lightbox__button:focus {
+.lightbox__button:focus,
+.prev-slide:hover,
+.prev-slide:focus,
+.next-slide:hover,
+.next-slide:focus {
   background-color: rgba(0, 0, 0, 0.5);
 }
